--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "accepts": "^1.3.8",
     "acorn": "^8.14.0",
     "agent-base": "^6.0.2",
+    "amqplib": "^0.10.5",
     "anser": "^1.4.10",
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
@@ -121,6 +122,7 @@
     "form-data": "^4.0.1",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
+    "fs": "^0.0.1-security",
     "fs-minipass": "^2.1.0",
     "fs.realpath": "^1.0.0",
     "function-bind": "^1.1.2",
@@ -141,6 +143,7 @@
     "hasown": "^2.0.2",
     "hermes-estree": "^0.23.1",
     "hermes-parser": "^0.23.1",
+    "http": "^0.0.1-security",
     "http-errors": "^2.0.0",
     "https-proxy-agent": "^5.0.1",
     "human-signals": "^2.1.0",
@@ -219,7 +222,7 @@
     "mkdirp": "^0.5.6",
     "mongodb": "3.7",
     "mongodb-connection-string-url": "^3.0.1",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.12.2",
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.1.3",
@@ -253,6 +256,7 @@
     "p-try": "^2.2.0",
     "parse-json": "^4.0.0",
     "parseurl": "^1.3.3",
+    "path": "^0.12.7",
     "path-exists": "^4.0.0",
     "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
@@ -279,6 +283,7 @@
     "readdirp": "^3.6.0",
     "readline": "^1.3.0",
     "recast": "^0.21.5",
+    "redis": "^4.7.0",
     "regenerate": "^1.4.2",
     "regenerate-unicode-properties": "^10.2.0",
     "regenerator-runtime": "^0.13.11",
