Server updated with redis and rabbitmq instances

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -9,7 +9,8 @@ services:
       - EMAIL_USER=kingravin001@gmail.com
       - EMAIL_PASS=lwbg biio gjpu fcfp
       - REDIS_URL=redis://red-cvgr815umphs73cv5hl0:6379
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+      - RABBITMQ_URL=amqp://guest:guest@chatfun-backend.onrender.com:5672
+
     depends_on:
       - rabbitmq
       - redis
