--- a/client/app.json
+++ b/client/app.json
@@ -1,41 +1,49 @@
 {
-    "expo": {
-      "name": "ChatFun",
-      "slug": "chatfun",
-      "version": "1.0.0",
-      "orientation": "portrait",
-      "icon": "./assets/icon.png",
-      "updates": {
-        "fallbackToCacheTimeout": 0
-      },
-      "assetBundlePatterns": [
-        "**/*",
-        "assets/animations/*.json"
-      ],
-      "ios": {
-        "supportsTablet": true,
-        "bundleIdentifier": "com.chatfun.app"
-      },
-      "android": {
-        "adaptiveIcon": {
-          "foregroundImage": "./assets/adaptive-icon.png",
-          "backgroundColor": "#FFFFFF"
-        },
-        "package": "com.chatfun.app",
-        "permissions": [
-          "CAMERA",
-          "READ_EXTERNAL_STORAGE",
-          "WRITE_EXTERNAL_STORAGE"
-        ]
-      },
-      "web": {
-        "favicon": "./assets/favicon.png"
-      },
-      "extra": {
-        "eas": {
-          "projectId": "4db66be4-7c72-4606-a069-7faf1793effe"
-        }
+  "expo": {
+    "name": "chatfun",
+    "slug": "chatfun",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "userInterfaceStyle": "light",
+    "splash": {
+      "image": "./assets/splash-icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.ravin009.chatfun",
+      "infoPlist": {
+        "NSCameraUsageDescription": "This app uses the camera to allow you to take photos and upload them.",
+        "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to upload images."
       }
-    }
+    },
+    "android": {
+      "package": "com.ravin009.chatfun",
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      },
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "INTERNET"
+      ]
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
+    },
+    "assetBundlePatterns": [
+      "**/*",
+      "assets/animations/*"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "d6b7198b-3f57-4cbd-9dd0-23b909157b98"
+      }
+    },
+    "sdkVersion": "48.0.0"
   }
-  
+}
