--- a/client/eas.json
+++ b/client/eas.json
@@ -1,10 +1,21 @@
 {
-    "build": {
-      "production": {
-        "releaseChannel": "default",
-        "android": {
-          "buildType": "apk"
-        }
-      }
+  "cli": {
+    "version": ">= 16.0.0",
+    "appVersionSource": "remote"
+  },
+  "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+    },
+    "preview": {
+      "distribution": "internal"
+    },
+    "production": {
+      "autoIncrement": true
     }
+  },
+  "submit": {
+    "production": {}
   }
+}
