--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "client",
-  "displayName": "ChatFun",
+  "name": "chatfun",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,73 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/config-plugins": "~9.0.0",
-    "@expo/metro-config": "~0.19.0",
-    "@expo/prebuild-config": "~8.0.0",
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-community/slider": "4.5.5",
-    "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/native": "^7.0.15",
-    "@react-navigation/stack": "^7.1.2",
-    "@reduxjs/toolkit": "^2.5.0",
-    "axios": "^1.7.9",
-    "eas": "^0.1.0",
-    "expo": "~52.0.38",
-    "expo-device": "~7.0.2",
-    "expo-file-system": "~18.0.11",
-    "expo-image": "~2.0.6",
-    "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-screen-capture": "~7.0.1",
-    "expo-status-bar": "~2.0.1",
-    "lottie-react-native": "7.1.0",
-    "metro-core": "0.81.3",
-    "metro-resolver": "0.81.0",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-async-storage": "^0.0.1",
-    "react-native-color-picker": "^0.6.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "2.11.0",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.24.0",
+    "expo": "^48.0.0",
+    "expo-file-system": "~15.2.2",
+    "expo-image": "~1.0.2",
+    "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-screen-capture": "~5.1.1",
+    "expo-status-bar": "~1.4.0",
+    "lottie-react-native": "5.1.4",
+    "react": "^18.2.0",
+    "react-native": "0.71.14",
     "react-native-color-wheel": "^0.1.7",
-    "react-native-emoji-selector": "^0.2.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-get-random-values": "~1.11.0",
-    "react-native-image-crop-picker": "^0.42.0",
-    "react-native-image-picker": "^8.2.0",
-    "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-svg": "15.8.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-wheel-color-picker": "^1.3.1",
-    "redux": "^5.0.1",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "socket.io-client": "^4.1.3",
+    "the": "^1.0.2",
+    "with": "^7.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@react-native-community/cli": "latest"
+    "@babel/core": "^7.12.9"
   },
-  "resolutions": {
-    "metro-resolver": "0.81.0"
-  },
+  "private": true,
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
-        "exclude": [
-          "react-native-emoji-selector",
-          "react-native-randombytes",
-          "eas",
-          "expo-cli",
-          "metro-core",
-          "react-native-async-storage",
-          "react-native-color-picker",
-          "react-native-color-wheel",
-          "react-native-wheel-color-picker",
-          "socket.io",
-          "socket.io-client",
-          "react-native-image-crop-picker"
-        ],
         "listUnknownPackages": false
       }
     }
